# pi-gen-pistomp

./: .dockerignore  .gitignore  COMPARISON.md  Dockerfile  GUIDE.md  NETWORKING.md  PACKAGE-COMPARISON.md  PACKAGING.md  PLAN-3a.md  PLAN-3b.md  PLAN-3c.md  PLAN-3d.md  PLAN-3e.md  PLAN-3f.md  README.md  UPGRADE-TRIXIE.md  UX-PARITY.md  build-docker.sh  build-package-docker.sh  build-rt-kernel-docker.sh  build.sh  compress-img.sh  config  config.sh  image.sh
.github/workflows/: build-amidithru.yml  build-browsepy.yml  build-cabsim-lv2.yml  build-deb.yml  build-ffmpeg-pistomp.yml  build-fluidsynth-headless.yml  build-hylia.yml  build-image.yml  build-jack-capture.yml  build-jack2-pistomp.yml  build-jackbridge.yml  build-lcd-splash.yml  build-lg-pistomp.yml  build-libfluidsynth2-compat.yml  build-mod-host-pistomp.yml  build-mod-midi-merger.yml  build-mod-ttymidi.yml  build-mod-ui.yml  build-pi-stomp.yml  build-pistomp-recovery.yml  build-sfizz-pistomp.yml  build-touchosc2midi.yml  build-veja-1960-cab-lv2.yml  (+3 more)
builder/: README.md  deploy.sh  pyproject.toml
builder/pistomp_builder/: __init__.py  base.py  components.py  dependencies.py  deploy.py  effects.py  executor.py  filesystem.py  lv2_analyze.py  main.py  mod.py  model.py  pistomp.py  resolver.py  service.py  source.py  target.py
conf/: distributions
debpkgs/: README.md
docs/: DEBIAN-VS-ARCH.md
export-image/: prerun.sh
rt-kernel/: Dockerfile  diffconfig
scripts/: build-common.sh  check-dirty-pkgs.sh  check-packages.sh  check-upstream-staleness.sh  fetch-packages.sh  setup-apt-repo.sh
stage3/: EXPORT_IMAGE
(+179 files in other folders)
